# rawslice

./: Cargo.toml  README.rst
benches/: unroll.rs
src/: iter.rs  lib.rs
tests/: quick.rs
