#1703815[package]
name = "rawslice"
version = "0.1.1"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = """
Reimplementation of the slice iterators, with extra features. For example
creation from raw pointers and start, end pointer accessors.
"""

repository = "https://github.com/bluss/rawslice/"
documentation = "https://docs.rs/rawslice/"

keywords = ["no_std", "raw", "slice", "iterator"]

[dependencies]
rawpointer = "0.2.1"

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
